pfm-angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: pfm
  name: pfm-angular-service
  labels:
    app: pfm-angular-service
spec:
  selector:
    app: pfm-angular
  ports:
    - port: 80
      name: pfm-angular-port
      protocol: TCP
      targetPort: 80
