pfm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pfm
  name: pfm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: local.pfm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pfm-angular-service
                port:
                  number: 80
